--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="bg-gray-800 text-white">
     <div id="app"></div>
     <script type="module">
       import App from "./js/components/App.js";
